# snow-toolchain

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  dune-project  index.html  snow.opam
.github/workflows/: test.yml
common/lib/: advanced_typechecker.ml  analyzer.ml  ast.ml  ast_utils.ml  codegen.ml  dune  error_reporting.ml  formatter.ml  inference.ml  lexer.ml  parser.ml  platform.ml  semantic.ml  snow.ml  typechecker.ml
compiler/test/: dune  test_advanced_pattern_match.ml  test_analyzer.ml  test_array_codegen.ml  test_ast.ml  test_cli_error_handling.ml  test_codegen.ml  test_codegen_func.ml  test_end_to_end_integration.ml  test_error_handling_codegen.ml  test_error_reporting.ml  test_for_codegen.ml  test_higher_order_functions.ml  test_lexer.ml  test_mod_install.ml  test_mod_system.ml  test_option_result_codegen.ml  test_package_main_simple.ml  test_parser.ml  test_semantic.ml  test_snow_cli.ml  test_snow_commands.ml  test_struct.ml  test_tuple_codegen.ml  test_type_inference.ml  test_typechecker.ml  test_types.ml  test_unary_codegen.ml
doc/en/: dependency_management.md
doc/en/language_spec/: ffi_spec.md  spec.md
snow/: index.html
snow/Advanced_typechecker/: index.html
snow/Analyzer/: index.html
snow/Ast/: index.html
snow/Ast/TypeUtils/: index.html
snow/Ast_utils/: index.html
snow/Codegen/: index.html
snow/Error_reporting/: index.html
snow/Formatter/: index.html
snow/Inference/: index.html
snow/Lexer/: index.html
snow/Parser/: index.html
snow/Platform/: index.html
snow/Platform/FunctionMap/: index.html
snow/Platform/LinkOptions/: index.html
snow/Platform/TypeSizes/: index.html
snow/Semantic/: index.html
snow/Snow/: index.html
snow/Typechecker/: index.html
